--- a/src/Components/EventsComponent/eventmodal.css
+++ b/src/Components/EventsComponent/eventmodal.css
@@ -26,6 +26,7 @@
   width: 40%;
   border-radius: 5px;
   opacity: 0;
+  z-index: 1000;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
   -webkit-box-shadow: 0px 0px 10px 5px #0c455c;
