--- a/src/Components/EventsComponent/animation.css
+++ b/src/Components/EventsComponent/animation.css
@@ -43,10 +43,11 @@
           justify-content: center;
   -ms-grid-columns: 1fr 1fr;
       grid-template-columns: 1fr 1fr;
-  -ms-grid-rows: (120px)[3];
+  -ms-grid-rows: (120px);
       grid-template-rows: repeat(3, 120px);
   padding: 20px 0;
   grid-gap: 40px;
+  z-index: 1000;
 }
 
 .eve-anim .roboWrap {
