--- a/src/Components/EventsComponent/eventmodal.css
+++ b/src/Components/EventsComponent/eventmodal.css
@@ -234,6 +234,26 @@
   }
 }
 
+@media (min-width: 1200px) and (max-width: 1400px) {
+  ul.tabs {
+    -ms-grid-columns: (minmax(90px, 1fr))[auto-fit] !important;
+        grid-template-columns: repeat(auto-fit, minmax(90px, 1fr)) !important;
+  }
+  .tab-button p {
+    display: none;
+  }
+}
+
+@media (max-width: 700px) {
+  ul.tabs {
+    -ms-grid-columns: (minmax(50px, 1fr))[auto-fit] !important;
+        grid-template-columns: repeat(auto-fit, minmax(50px, 1fr)) !important;
+  }
+  .tab-button p {
+    display: none;
+  }
+}
+
 @media (max-width: 600px) {
   .evePage .modalWrap {
     width: 90%;
