--- a/src/Components/EventsComponent/eventmodal.scss
+++ b/src/Components/EventsComponent/eventmodal.scss
@@ -195,6 +195,28 @@ $cartHover: #ce0833;
     }
 }
 
+@media (min-width: 1200px) and (max-width: 1400px) {
+    ul.tabs {
+        grid-template-columns: repeat(auto-fit, minmax(90px, 1fr)) !important;
+    }
+    .tab-button {
+        p {
+            display: none;
+        }
+    }
+}
+
+@media (max-width: 700px) {
+    ul.tabs {
+        grid-template-columns: repeat(auto-fit, minmax(50px, 1fr)) !important;
+    }
+    .tab-button {
+        p {
+            display: none;
+        }
+    }
+}
+
 @media (max-width: 600px) {
     .evePage {
         .modalWrap {
