--- a/src/Components/HomeComponent/HomeAnimation/AnimationSVGs/EyeDea21.css
+++ b/src/Components/HomeComponent/HomeAnimation/AnimationSVGs/EyeDea21.css
@@ -4,7 +4,7 @@
   }
 
 #eyeDEA2_1_svg__irislines{
-    animation: spin 30s linear infinite;
+    animation: spin 60s linear infinite;
     transform-origin: 50.10% 47.3%;
     transition-timing-function: ease-in;
 }
@@ -26,8 +26,17 @@
     transform: translateX(-3%) scale(1.1);
     transition-timing-function: ease;
 }
-.eye-hover{
+.eye-hover,.mask-hover{
     transform-origin: 50.10% 47.3%;
     transform: scale(1.1);
     transition-timing-function: ease;
+}
+
+
+@keyframes fade-in{
+    from{opacity: 0;}
+    to{opacity: 0.1;}
+}
+.fade-in-line{
+    animation: fade-in 3s linear;
 }
