--- a/src/Components/HomeComponent/HomeAnimation/HomeAnimation.css
+++ b/src/Components/HomeComponent/HomeAnimation/HomeAnimation.css
@@ -15,10 +15,15 @@
     /* background-color: black; */
     z-index: 4;
 }
+@keyframes delay-fade-in {
+    from{opacity: 0;}
+    to{opacity: 1;}
+}
 .anim-overlay-bg{
     width: 100vw;
     object-fit: contain;
     z-index: 3;
+    animation: delay-fade-in 3s linear;
 }
 .anim-overlay-upper{
     position: absolute;
