--- a/src/Components/EventsComponent/eventmodal.css
+++ b/src/Components/EventsComponent/eventmodal.css
@@ -13,6 +13,7 @@
 }
 
 .evePage .modalWrap {
+  z-index: 1000;
   position: absolute !important;
   background: linear-gradient(45deg, #09b7ec, #2c8bda);
   color: #242424;
