--- a/src/Components/HomeComponent/HomeAnimation/HomeAnimation.css
+++ b/src/Components/HomeComponent/HomeAnimation/HomeAnimation.css
@@ -2,6 +2,8 @@
     height: calc(100vh - 60px);
     width: 100vw;
     position: relative;
+    background: rgb(7,19,51);
+    background: radial-gradient(circle, rgba(7,19,51,1) 0%, rgba(0,0,0,1) 100%);
 }
 
 .hide{display: none;}
@@ -12,8 +14,18 @@
     width: 100%;
     top: 0;
     left: 0;
-    background-color: black;
+    /* background-color: black; */
+    z-index: 4;
+}
+@keyframes delay-fade-in {
+    from{opacity: 0;}
+    to{opacity: 1;}
+}
+.anim-overlay-bg{
+    width: 100vw;
+    object-fit: contain;
     z-index: 3;
+    animation: delay-fade-in 5s linear;
 }
 .anim-overlay-upper{
     position: absolute;
@@ -21,7 +33,7 @@
     width: 100%;
     top: 0;
     left: 0;
-    background-color: black;
+    /* background-color: black; */
     z-index: 5;
 }
 @keyframes disappear{
@@ -47,7 +59,7 @@
     99%{opacity: 1;}
     100%{opacity: 0;display: none;}
 }
-.hide-now{
+.hide-after-nine{
     animation: delay_hide 9s linear;
     -webkit-animation-fill-mode: forwards;
     -moz-animation-fill-mode: forwards;
@@ -64,7 +76,15 @@
     left: 0;
     z-index: 2;
 }
-.anim-iframe{
-    width: 100vw;
-    object-fit: contain;
+@media only screen and (min-width: 768px) {
+    .anim-iframe{
+        width: 100vw;
+        object-fit: contain;
+    }
+}
+@media only screen and (max-width: 768px) {
+    .anim-iframe{
+        height: 100vh;
+        object-fit: contain;
+    }
 }
