--- a/src/Components/EventsComponent/eventmodal.css
+++ b/src/Components/EventsComponent/eventmodal.css
@@ -13,7 +13,6 @@
 }
 
 .evePage .modalWrap {
-  z-index: 1000;
   position: absolute !important;
   background: linear-gradient(45deg, #09b7ec, #2c8bda);
   color: #242424;
@@ -27,7 +26,6 @@
   width: 40%;
   border-radius: 5px;
   opacity: 0;
-  z-index: 1000;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
   -webkit-box-shadow: 0px 0px 10px 5px #0c455c;
@@ -120,7 +118,7 @@
 }
 
 .evePage .modalWrap .modalBody p {
-  text-align: left;
+  text-align: center;
 }
 
 .evePage .modalWrap .modalBody h5 {
@@ -134,8 +132,8 @@
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .evePage .modalWrap .modalBody li span {
