--- a/src/Components/HomeComponent/HomeAnimation/AnimationSVGs/EyeDea21.css
+++ b/src/Components/HomeComponent/HomeAnimation/AnimationSVGs/EyeDea21.css
@@ -41,5 +41,5 @@
     animation: fade-in 3s linear;
 }
 #eyeDEA2_1_svg__Layer_1{
-    transform: scale(0.85) translateY(-8%);
+    transform: scale(0.85) ;
 }
