--- a/src/Components/HomeComponent/HomeAnimation/AnimationSVGs/EyeDea20.css
+++ b/src/Components/HomeComponent/HomeAnimation/AnimationSVGs/EyeDea20.css
@@ -81,5 +81,5 @@
     transform-origin: 49.6% 50%;
 }
 #eyeDEA2_0_svg__Layer_1{
-    transform: scale(0.85) translateY(-8%);
+    transform: scale(0.85) ;
 }
