--- a/src/Components/EventsComponent/eventmodal.css
+++ b/src/Components/EventsComponent/eventmodal.css
@@ -25,6 +25,7 @@
           flex-direction: column;
   width: 40%;
   border-radius: 5px;
+  z-index: 100;
   opacity: 0;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
@@ -133,7 +134,6 @@
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
-          justify-content: center;
 }
 
 .evePage .modalWrap .modalBody li span {
