--- a/src/Components/EventsComponent/eventmodal.css
+++ b/src/Components/EventsComponent/eventmodal.css
@@ -25,7 +25,6 @@
           flex-direction: column;
   width: 40%;
   border-radius: 5px;
-  z-index: 100;
   opacity: 0;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
@@ -119,7 +118,7 @@
 }
 
 .evePage .modalWrap .modalBody p {
-  text-align: left;
+  text-align: center;
 }
 
 .evePage .modalWrap .modalBody h5 {
@@ -134,6 +133,7 @@
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .evePage .modalWrap .modalBody li span {
