--- a/src/Components/Footer/footer.module.css
+++ b/src/Components/Footer/footer.module.css
@@ -2,17 +2,17 @@
     margin: 10px 0;
 }
 
-.leftside{
+.leftside {
     text-align: left;
     padding-left: 35px;
 }
 
-.rightside{
+.rightside {
     text-align: right;
     padding-right: 35px;
 }
 
-#refundsize{
+#refundsize {
     height: 100vh;
 }
 
@@ -20,7 +20,8 @@
     justify-content: center;
     align-items: center;
     display: flex;
-    background: #262626;
+    background: transparent;
+    /* background: radial-gradient(circle, rgba(7, 19, 51, 1) 0%, rgba(0, 0, 0, 1) 100%); */
     padding: 10px 0;
     color: #fff;
     bottom: 0%;
@@ -39,7 +40,7 @@
 }
 
 .iconfb {
-     background: linear-gradient(45deg, #36dca3, #3b94df); 
+    background: linear-gradient(45deg, #36dca3, #3b94df);
     border-radius: 50%;
     color: #fff;
     padding: 7px 15px;
@@ -87,7 +88,6 @@
     footer-font {
         font-size: 10px;
     }
-
 }
 
 @media (max-width: 600px) {
