--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -20,8 +20,8 @@
     justify-content: center;
     align-items: center;
     display: flex;
-    background: transparent;
     /* background: radial-gradient(circle, rgba(7, 19, 51, 1) 0%, rgba(0, 0, 0, 1) 100%); */
+    background: #262626;
     padding: 10px 0;
     color: #fff;
     bottom: 0%;
