--- a/src/Components/HomeComponent/HomeAnimation/HomeAnimation.css
+++ b/src/Components/HomeComponent/HomeAnimation/HomeAnimation.css
@@ -87,6 +87,10 @@
     z-index: 2;
 }
 
+.homeWrap .footer {
+    background: transparent !important;
+}
+
 @media only screen and (min-width: 768px) {
     .anim-iframe {
         width: 101vw;
