--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -22,7 +22,7 @@
     display: flex;
     /* background: radial-gradient(circle, rgba(7, 19, 51, 1) 0%, rgba(0, 0, 0, 1) 100%); */
     background: #262626;
-    padding: 10px 0;
+    padding: 10px 15px;
     color: #fff;
     bottom: 0%;
     z-index: 10000000;
