--- a/src/Components/EventsComponent/eventmodal.css
+++ b/src/Components/EventsComponent/eventmodal.css
@@ -25,7 +25,7 @@
           flex-direction: column;
   width: 40%;
   border-radius: 5px;
-  z-index: 100 !important;
+  opacity: 0;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
   -webkit-box-shadow: 0px 0px 10px 5px #0c455c;
@@ -118,7 +118,7 @@
 }
 
 .evePage .modalWrap .modalBody p {
-  text-align: left;
+  text-align: center;
 }
 
 .evePage .modalWrap .modalBody h5 {
@@ -133,7 +133,7 @@
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
-          /* justify-content: center; */
+          justify-content: center;
 }
 
 .evePage .modalWrap .modalBody li span {
