--- a/src/Components/EventsComponent/eventmodal.scss
+++ b/src/Components/EventsComponent/eventmodal.scss
@@ -37,6 +37,7 @@ $cartHover: #ce0833;
         color: $text;
         display: flex;
         flex-direction: column;
+        z-index: 5000;
         // color: white;
         // background-color: white;
         // color: rgb(6, 51, 77);
@@ -171,6 +172,12 @@ $cartHover: #ce0833;
                 i {
                     color: white !important;
                 }
+            }
+        }
+        .quizCheckboxWrap {
+            display: flex;
+            .quizCheckboxes {
+                margin: 20px auto 0;
             }
         }
     }
