--- a/src/Components/EventsComponent/eventmodal.css
+++ b/src/Components/EventsComponent/eventmodal.css
@@ -26,7 +26,7 @@
   z-index: 5000;
   width: 40%;
   border-radius: 5px;
-  z-index: 100 !important;
+  opacity: 0;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
   -webkit-box-shadow: 0px 0px 10px 5px #0c455c;
