--- a/src/Components/RegisterComponent/Register.scss
+++ b/src/Components/RegisterComponent/Register.scss
@@ -12,13 +12,13 @@
 }
 
 .regPage {
-    width: 90%;
+    width: 70%;
     font-size: 18px;
     min-height: 92vh;
     margin: auto;
     margin-top: 40px;
     display: grid;
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 1fr 1fr;
     // flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -29,7 +29,9 @@
         height: 80%;
         .reg-head {
             width: fit-content;
-            margin: 0 auto;
+            margin: 15px auto;
+            font-size: 35px;
+            margin-bottom: 50px;
             color: white;
         }
         img {
