--- a/src/Components/Modal/Modal.css
+++ b/src/Components/Modal/Modal.css
@@ -15,6 +15,8 @@
 .upmodal .close {
     margin: 0 !important;
     padding: 0 !important;
+    position: absolute;
+    right: 20px;
 }
 
 .upmodal li {
