--- a/src/Components/EventsComponent/eventmodal.css
+++ b/src/Components/EventsComponent/eventmodal.css
@@ -33,6 +33,20 @@
           box-shadow: 0px 0px 10px 5px #0c455c;
 }
 
+.evePage .modalWrap .cartplayBtns {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 80%;
+  margin: auto;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 .evePage .modalWrap .modalHead {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -89,6 +103,26 @@
 
 .evePage .modalWrap .regNowBtn:hover {
   background-color: #ce0833;
+}
+
+.evePage .modalWrap .playNow {
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  border-bottom-left-radius: 5px;
+  background: -webkit-gradient(linear, right top, left top, from(#02243b), to(#065572));
+  background: linear-gradient(to left, #02243b, #065572);
+  padding-right: 15px;
+  cursor: pointer;
+}
+
+.evePage .modalWrap .playNow i {
+  font-size: 22px;
+}
+
+.evePage .modalWrap .playNow:hover {
+  -webkit-transform: scale(1.07);
+          transform: scale(1.07);
 }
 
 .evePage .modalWrap hr {
