--- a/src/Components/EventsComponent/eventmodal.scss
+++ b/src/Components/EventsComponent/eventmodal.scss
@@ -17,6 +17,7 @@ $tabsText: #ffffff;
 $cart: radial-gradient(circle, rgb(236, 64, 12) 50%, rgb(255, 72, 0) 80%);
 $cart: linear-gradient(to left, #242525, #4d4b4b);
 $cart: linear-gradient(to right, #02243b, #065572);
+$play: linear-gradient(to left, #02243b, #065572);
 $cartHover: #ce0833;
 .evePage {
     .showModal1 {
@@ -46,6 +47,13 @@ $cartHover: #ce0833;
         opacity: 0;
         transition: all 0.3s;
         box-shadow: 0px 0px 10px 5px $boxShadow;
+        .cartplayBtns {
+            display: flex;
+            width: 80%;
+            margin: auto;
+            justify-content: center;
+            align-items: center;
+        }
         .modalHead {
             display: flex;
             margin: 10px auto;
@@ -87,6 +95,21 @@ $cartHover: #ce0833;
             &:hover {
                 // transform: scale(1.03);
                 background-color: $cartHover;
+            }
+        }
+        .playNow {
+            i {
+                font-size: 22px;
+            }
+            border-top-left-radius: 5px;
+            border-top-right-radius: 5px;
+            border-bottom-right-radius: 5px;
+            border-bottom-left-radius: 5px;
+            background: $play;
+            padding-right: 15px;
+            cursor: pointer;
+            &:hover {
+                transform: scale(1.07);
             }
         }
         hr {
