--- a/src/Components/EventsComponent/eventmodal.css
+++ b/src/Components/EventsComponent/eventmodal.css
@@ -113,6 +113,8 @@
   background: -webkit-gradient(linear, right top, left top, from(#02243b), to(#065572));
   background: linear-gradient(to left, #02243b, #065572);
   padding-right: 15px;
+  -webkit-animation: bounce 4s ease infinite;
+          animation: bounce 4s ease infinite;
   cursor: pointer;
 }
 
@@ -123,6 +125,118 @@
 .evePage .modalWrap .playNow:hover {
   -webkit-transform: scale(1.07);
           transform: scale(1.07);
+  -webkit-animation: none;
+          animation: none;
+  -webkit-filter: brightness(1.35);
+          filter: brightness(1.35);
+}
+
+@-webkit-keyframes bgChange {
+  from {
+    background: -webkit-gradient(linear, right top, left top, from(#02243b), to(#065572));
+    background: linear-gradient(to left, #02243b, #065572);
+  }
+  to {
+    background: -webkit-gradient(linear, right top, left top, from(#065572), to(#02243b));
+    background: linear-gradient(to left, #065572, #02243b);
+  }
+}
+
+@keyframes bgChange {
+  from {
+    background: -webkit-gradient(linear, right top, left top, from(#02243b), to(#065572));
+    background: linear-gradient(to left, #02243b, #065572);
+  }
+  to {
+    background: -webkit-gradient(linear, right top, left top, from(#065572), to(#02243b));
+    background: linear-gradient(to left, #065572, #02243b);
+  }
+}
+
+@-webkit-keyframes bounce {
+  0% {
+    background: -webkit-gradient(linear, right top, left top, from(#02243b), to(#065572));
+    background: linear-gradient(to left, #02243b, #065572);
+  }
+  50% {
+    background: -webkit-gradient(linear, left top, right top, from(#02243b), to(#065572));
+    background: linear-gradient(to right, #02243b, #065572);
+  }
+  85% {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+  }
+  90% {
+    -webkit-transform: translateY(-11%);
+            transform: translateY(-11%);
+    -webkit-filter: brightness(1.25);
+            filter: brightness(1.25);
+  }
+  92% {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+  }
+  95% {
+    -webkit-transform: translateY(-7%);
+            transform: translateY(-7%);
+    -webkit-filter: brightness(0.97);
+            filter: brightness(0.97);
+  }
+  97% {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+  }
+  99% {
+    -webkit-transform: translateY(-3%);
+            transform: translateY(-3%);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+
+@keyframes bounce {
+  0% {
+    background: -webkit-gradient(linear, right top, left top, from(#02243b), to(#065572));
+    background: linear-gradient(to left, #02243b, #065572);
+  }
+  50% {
+    background: -webkit-gradient(linear, left top, right top, from(#02243b), to(#065572));
+    background: linear-gradient(to right, #02243b, #065572);
+  }
+  85% {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+  }
+  90% {
+    -webkit-transform: translateY(-11%);
+            transform: translateY(-11%);
+    -webkit-filter: brightness(1.25);
+            filter: brightness(1.25);
+  }
+  92% {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+  }
+  95% {
+    -webkit-transform: translateY(-7%);
+            transform: translateY(-7%);
+    -webkit-filter: brightness(0.97);
+            filter: brightness(0.97);
+  }
+  97% {
+    -webkit-transform: translateY(0%);
+            transform: translateY(0%);
+  }
+  99% {
+    -webkit-transform: translateY(-3%);
+            transform: translateY(-3%);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
 }
 
 .evePage .modalWrap hr {
